# StudyMate-API

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AWS_SETUP_GUIDE.md  CQRS_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.dev  IMPROVEMENTS.md  MVP_API_REQUIREMENTS.md  ORG_README.md  README.md  SETUP_GUIDE.md  StudyMate_Company_Profile.md  StudyMate_Notion_Documentation.md  StudyMate_Real_Project_Profile.md  check_quality.py  database_optimization.py  docker-compose.dev.yml  docker-compose.yml  final_verification.py  manage.py  mypy.ini  performance_tests.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_code_quality.py
.github/workflows/: ci.yml  deploy.yml  notify.yml  safe-deploy.yml  test.yml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  zero_trust_views.py
accounts/management/commands/: analyze_database_performance.py  analyze_logs.py  manage_cache.py
accounts/migrations/: 0001_initial.py  0002_optimize_database_indexes.py
ansible/: ansible.cfg  site.yml
ansible/inventory/: hosts.yml
ansible/roles/app_deploy/tasks/: main.yml
ansible/roles/app_deploy/templates/: docker-compose.yml.j2  nginx.conf.j2
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
backend/: Dockerfile.dev  requirements.txt
backend/alembic/versions/: 001_initial_migration.py  002_add_indexes_and_constraints.py  003_add_audit_and_cache_tables.py
backend/app/clients/: openai_client.py
backend/app/routers/: auth.py  calendars.py  events.py  users.py
backend/app/services/: nlp_service.py
backend/prompts/: chatgpt_event_parser.md  timetree_event_parser.md
backend/tests/: conftest.py  test_auth.py  test_events.py  test_services.py
brand/: character-guide.md  design-assets.md  github-assets.md
collaboration/: models.py  serializers.py  urls.py  views.py
docker/: entrypoint.sh  gunicorn.conf.py  init-db.sql  nginx.conf  wait_for_db.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CI_CD_PIPELINE.md  DEVELOPMENT_GUIDE.md
home/: models.py  serializers.py  views.py
k8s/: api.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
nginx/: studymate-ssl.conf
notifications/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_optimize_database_indexes.py
quiz/: admin.py  apps.py  cqrs.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_optimize_database_indexes.py
scripts/: deploy.sh  health_check.sh  rollback.sh  setup_ec2.sh  setup_https.sh
scripts/deploy/: deploy_to_ec2.sh  simple_api_server.py
stats/: models.py  urls.py  views.py
study/: ab_testing_integration.py  admin.py  apps.py  cqrs.py  cqrs_views.py  filters.py  models.py  pagination.py  realtime_views.py  serializers.py  services.py  tracing_decorators.py  urls.py  views.py
study/management/commands/: distributed_tracing_management.py
study/migrations/: 0001_initial.py  0002_optimize_database_indexes.py
studymate_api/: ab_testing.py  advanced_cache.py  api_versioning.py  apps.py  asgi.py  auto_recovery.py  auto_recovery_config.py  cache.py  cache_strategy.py  cqrs.py  cqrs_urls.py  distributed_tracing.py  exceptions.py  health.py  health_urls.py  logging_config.py  metrics.py  middleware.py  monitoring.py  monitoring_middleware.py  personalization.py  realtime_analytics.py  routing.py  schema.py  schema_hooks.py  security.py  serializers.py  settings.py  streaming.py  test_settings.py  test_urls.py  types.py  urls.py  utils.py  validators.py  viewsets.py  websocket_consumers.py  wsgi.py  zero_trust_security.py
studymate_api/management/commands/: auto_recovery.py  cache_management.py  cqrs_management.py  create_ab_test.py  manage_ab_test.py  metrics_management.py  realtime_analytics_management.py  zero_trust_management.py
studymate_api/middleware/: tracing_middleware.py  zero_trust_middleware.py
studymate_api/urls/: ab_testing_urls.py  auto_recovery_urls.py
studymate_api/views/: ab_testing_views.py  auto_recovery_views.py  metrics.py  personalization.py
subscription/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0002_optimize_database_indexes.py
templates/: realtime_dashboard.html
terraform/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
test_results/: bandit.json  safety.json
tests/: README.md  __init__.py  factories.py  test_accounts.py  test_api_responses.py  test_study.py  utils.py
timetree-scheduler/: .env.example  .gitignore  README.md
timetree-scheduler/backend/: main.py  requirements.txt
timetree-scheduler/docs/: API_REFERENCE.md  DEPLOYMENT.md  EXAMPLES.md  QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
timetree-scheduler/frontend/: next.config.js  package.json  tailwind.config.js
(+18 files in other folders)
